--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-sanity": "^9.8.37",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook": "^0.0.1",
     "react-icons": "^5.4.0",
     "react-is": "^19.0.0",
     "react-slick": "^0.30.3",
